--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ document.querySelectorAll(".pueblo").forEach(img => {
   img.addEventListener("click", () => {
     const phone = "59171744396";
     const mensaje = encodeURIComponent("¡Hola! Estoy listo para pueblear 😄");
-    window.location.href = `https://wa.me/${phone}?text=${mensaje}`;
+    window.location.href = "https://wa.me/59171744396?text=Hola,%20quiero%20pueblear";
 
   });
 });
